# dms-reporting

./: .gitignore  Báo cáo doanh số khoán.xlsx  Báo cáo kiểm tra đơn hàng.xlsx  Báo cáo số lượng sản phẩm.xlsx  Báo cáo tồn kho.xlsx  Bảng khoán.xlsx  DMS Reporting.spec  Phân tuyến khách hàng không.xlsx  Phân tuyến khách hàng.xlsx  README.md  Sale_Order_All.xlsx  build_windows.bat  build_windows.ps1  khach_theo_nhan_vien.xlsx  main.py  main_macos.py  pyproject.toml  t.xlsx
.github/workflows/: build-windows-app.yml
dms_reporting/: __init__.py  app_info.py  cli.py  config.py  constants.py  macos_app.py  reporting.py  updater.py  user_access.py
dms_reporting/domain/: __init__.py  models.py
dms_reporting/repositories/: __init__.py  excel_repository.py
dms_reporting/services/: __init__.py  sales_report_service.py
modules/: Customer.py  Customer_copy.py  Employee.py  File.py  ItemOrder.py  ListCustomers.py  ListCustomers_1.py  ListCustomers_copy.py  ListProducts.py  ListReturnPurchaseOrder.py  ListReturnSaleOrder.py  ListSaleOrder.py  ListSaleOrderNPP.py  Order.py  Product.py  PromotionChecker.py  Sale_Order_All.xlsx  SalesReport copy.py  SalesReport.py  Territory.py  TerritoryAssignment.py  TerritoryManager.py  abiphaBáo cáo doanh số khách hàngabipha.xlsx  saleOrderNPP.xlsx  test.py
modules/abipha/: CRM_Account.xlsx  (+11 more)
scripts/: build_macos_app.sh  build_macos_update_artifacts.sh  generate_app_icon.py
tests/: test_app_info.py  test_cli.py  test_domain.py  test_macos_app.py  test_sales_report_service.py  test_territory_manager.py  test_updater.py  test_user_access.py
(+207 files in other folders)
