[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dms-reporting"
version = "0.3.0"
description = "Object-oriented reporting toolkit for MISA CRM Excel exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "python-dateutil>=2.9"
]

[project.scripts]
dms-reporting = "dms_reporting.cli:main"

[project.gui-scripts]
dms-reporting-macos = "dms_reporting.macos_app:launch"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
macos = [
  "pyinstaller>=6.0"
]

[tool.setuptools.packages.find]
include = ["dms_reporting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
